# truman

./: .gitignore  .gitmodules  LICENSE  README.md
config/: dockerfile  (+1 more)
static_analysis/: CMakeLists.txt
static_analysis/Analyzer/: CMakeLists.txt
static_analysis/Analyzer/include/: AliasAnalysisVisitor.h  AliasFuncHandlerCallback.h  AliasObject.h  DMAAnalysisVisitor.h  DMAResult.h  GlobalVisitor.h  ModuleState.h  PathAnalysisVisitor.h  PointsToUtils.h  TaintAnalysisVisitor.h  TaintInfo.h  VisitorCallback.h  analysis.h  dma.h  dma_analysis.h
static_analysis/Analyzer/src/: AliasAnalysisVisitor.cpp  AliasFuncHandlerCallback.cpp  AliasObject.cpp  DMAAnalysisVisitor.cpp  DMAResult.cpp  GlobalVisitor.cpp  PathAnalysisVisitor.cpp  PointsToUtils.cpp  TaintAnalysisVisitor.cpp  TaintUtils.cpp  analyzer.cpp  dma.cpp  dma_analysis.cpp
static_analysis/Customizations/include/: FunctionChecker.h
static_analysis/Customizations/src/: FunctionChecker.cpp
static_analysis/LinuxKernelCustomizations/include/: KernelFunctionChecker.h
static_analysis/LinuxKernelCustomizations/src/: KernelFunctionChecker.cpp
static_analysis/RangeAnalysis/src/: RangeAnalysis.cpp
static_analysis/Utils/: CMakeLists.txt
static_analysis/Utils/include/: CFGUtils.h  Constraint.h  InstructionUtils.h
static_analysis/Utils/src/: CFGUtils.cpp  Constraint.cpp  InstructionUtils.cpp
static_analysis/include/: blacklist.h  common.h
static_analysis/include/analyzer/: alias_analyzer.h  analyzer.h  io_analyzer.h
static_analysis/include/dispatcher/: alias_dispatcher.h  dispatcher.h  io_dispatcher.h
(+35 files in other folders)
